--- a/blog/echelle_des_classe.ipynb
+++ b/blog/echelle_des_classe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40b1f0c2",
+   "id": "af956b84",
    "metadata": {},
    "source": [
     "### Avec SimpleNamespace"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799173bd",
+   "id": "5c2a821b",
    "metadata": {},
    "source": [
     "### Avec namedtuple"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b3948035",
+   "id": "67b2196e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00386ffe",
+   "id": "a1a1fd45",
    "metadata": {},
    "source": [
     "### Définition d'une pseudo-classe"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "195ca2f1",
+   "id": "9c60e6bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a22fd79c",
+   "id": "a2891c59",
    "metadata": {},
    "source": [
     "### instantiation et manipulation"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "31dee7b4",
+   "id": "ab6d328f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e20a0ab3",
+   "id": "0d4a0a2a",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57a5942e",
+   "id": "b02a1787",
    "metadata": {},
    "source": [
     "### Les namedtuples sont très utilent pour manipuler des résultats d'une requete SQL ou des fichiers structurés"
@@ -178,14 +178,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d344ebb",
+   "id": "7f0f128c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8918c5eb",
+   "id": "fd3b6b89",
    "metadata": {},
    "source": [
     "### Manipulation comme un objet ou comme un tuple"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "57a79f04",
+   "id": "41429c8a",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f747e889",
+   "id": "a9498c94",
    "metadata": {},
    "source": [
     "### A partir d'un iterable"
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f19d2d15",
+   "id": "e94289fa",
    "metadata": {
     "scrolled": true
    },
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c99aa7bc",
+   "id": "73c116c3",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b9666f3",
+   "id": "c3ef4410",
    "metadata": {},
    "source": [
     "### A partir d'un dictionnaire"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "db2f6357",
+   "id": "0eb9dfbd",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd74368",
+   "id": "a3d66cda",
    "metadata": {},
    "source": [
     "### et réciproquement"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dde50e0f",
+   "id": "f26c6980",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d38f65",
+   "id": "e395ad9c",
    "metadata": {},
    "source": [
     "### Création à la volée d'un objet à partir d'une ligne json."
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33869bc0",
+   "id": "6a6e3471",
    "metadata": {},
    "source": [
     "#### soit la structure json : \n"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bd300a78",
+   "id": "18b8ce30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bf5dae3c",
+   "id": "ed004730",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e7780b2a",
+   "id": "528a7b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "94ef2bff",
+   "id": "15eb81b5",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "261f5e19",
+   "id": "5da27255",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "397d3a2a",
+   "id": "771aa22c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "595af1c7",
+   "id": "291261c5",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "79a20372",
+   "id": "09e3cf56",
    "metadata": {},
    "outputs": [
     {
@@ -464,8 +464,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "id": "11dcb596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code_postal = slice(0,5)\n",
+    "ville = slice(6,None)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "ed37fbcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ligne ='94350 Villiers sur marne'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "630683dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94350\n",
+      "Villiers sur marne\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ligne[code_postal])\n",
+    "print(ligne[ville])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9d0b2065",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class slice in module builtins:\n",
+      "\n",
+      "class slice(object)\n",
+      " |  slice(stop)\n",
+      " |  slice(start, stop[, step])\n",
+      " |  \n",
+      " |  Create a slice object.  This is used for extended slicing (e.g. a[0:10:2]).\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __reduce__(...)\n",
+      " |      Return state information for pickling.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  indices(...)\n",
+      " |      S.indices(len) -> (start, stop, stride)\n",
+      " |      \n",
+      " |      Assuming a sequence of length len, calculate the start and stop\n",
+      " |      indices, and the stride length of the extended slice described by\n",
+      " |      S. Out of bounds indices are clipped in a manner consistent with the\n",
+      " |      handling of normal slices.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  start\n",
+      " |  \n",
+      " |  step\n",
+      " |  \n",
+      " |  stop\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(slice)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "daab5bd4",
+   "id": "1d39deca",
    "metadata": {},
    "outputs": [],
    "source": []
