--- a/blog/echelle_des_classe.ipynb
+++ b/blog/echelle_des_classe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af956b84",
+   "id": "fded73b3",
    "metadata": {},
    "source": [
     "### Avec SimpleNamespace"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c2a821b",
+   "id": "b765d89b",
    "metadata": {},
    "source": [
     "### Avec namedtuple"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67b2196e",
+   "id": "d83fa949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a1fd45",
+   "id": "bdbe8905",
    "metadata": {},
    "source": [
     "### Définition d'une pseudo-classe"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c60e6bc",
+   "id": "eb449953",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2891c59",
+   "id": "a36793c0",
    "metadata": {},
    "source": [
     "### instantiation et manipulation"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ab6d328f",
+   "id": "226a3372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0d4a0a2a",
+   "id": "4d504233",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b02a1787",
+   "id": "93ce8028",
    "metadata": {},
    "source": [
     "### Les namedtuples sont très utilent pour manipuler des résultats d'une requete SQL ou des fichiers structurés"
@@ -178,14 +178,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0f128c",
+   "id": "0bea2401",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fd3b6b89",
+   "id": "3b95687f",
    "metadata": {},
    "source": [
     "### Manipulation comme un objet ou comme un tuple"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "41429c8a",
+   "id": "32a6b30f",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9498c94",
+   "id": "52c218f9",
    "metadata": {},
    "source": [
     "### A partir d'un iterable"
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e94289fa",
+   "id": "b2af6ff4",
    "metadata": {
     "scrolled": true
    },
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "73c116c3",
+   "id": "7af0b02b",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3ef4410",
+   "id": "06c5f70c",
    "metadata": {},
    "source": [
     "### A partir d'un dictionnaire"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0eb9dfbd",
+   "id": "a3173301",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d66cda",
+   "id": "fa73e847",
    "metadata": {},
    "source": [
     "### et réciproquement"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f26c6980",
+   "id": "1bc9d2c1",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e395ad9c",
+   "id": "acc71e30",
    "metadata": {},
    "source": [
     "### Création à la volée d'un objet à partir d'une ligne json."
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a6e3471",
+   "id": "5f26aea2",
    "metadata": {},
    "source": [
     "#### soit la structure json : \n"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "18b8ce30",
+   "id": "b3dc5dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ed004730",
+   "id": "fbae6f69",
    "metadata": {},
    "outputs": [
     {
@@ -362,19 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "528a7b33",
+   "execution_count": 79,
+   "id": "b8f835fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import types\n",
-    "obj = json.loads(\"{\\\"un\\\": 1, \\\"deux\\\": 2, \\\"trois\\\": 3, \\\"dizaine\\\": [10, 20, 30, 40]}\",object_hook= lambda d: types.SimpleNamespace(**d) )"
+    "obj = json.loads(\"{\\\"un\\\": 1, \\\"deux\\\": 2, \\\"trois\\\": 3, \\\"dizaine\\\": [10, 20, 30, 40]}\",\n",
+    "                 object_hook= lambda d: types.SimpleNamespace(**d) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "15eb81b5",
+   "execution_count": 80,
+   "id": "7a5ed7dc",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +384,7 @@
        "namespace(un=1, deux=2, trois=3, dizaine=[10, 20, 30, 40])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,8 +395,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5da27255",
+   "execution_count": 81,
+   "id": "be2fc0fe",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +405,7 @@
        "2"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,8 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "771aa22c",
+   "execution_count": 82,
+   "id": "02940f56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "291261c5",
+   "id": "90733a34",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "09e3cf56",
+   "id": "fc67b78b",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "11dcb596",
+   "id": "49f877b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ed37fbcd",
+   "id": "bfc2f0aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "630683dd",
+   "id": "9bb61712",
    "metadata": {},
    "outputs": [
     {
@@ -506,90 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "9d0b2065",
+   "execution_count": 78,
+   "id": "987e5cee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class slice in module builtins:\n",
-      "\n",
-      "class slice(object)\n",
-      " |  slice(stop)\n",
-      " |  slice(start, stop[, step])\n",
-      " |  \n",
-      " |  Create a slice object.  This is used for extended slicing (e.g. a[0:10:2]).\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __eq__(self, value, /)\n",
-      " |      Return self==value.\n",
-      " |  \n",
-      " |  __ge__(self, value, /)\n",
-      " |      Return self>=value.\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __gt__(self, value, /)\n",
-      " |      Return self>value.\n",
-      " |  \n",
-      " |  __le__(self, value, /)\n",
-      " |      Return self<=value.\n",
-      " |  \n",
-      " |  __lt__(self, value, /)\n",
-      " |      Return self<value.\n",
-      " |  \n",
-      " |  __ne__(self, value, /)\n",
-      " |      Return self!=value.\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Return state information for pickling.\n",
-      " |  \n",
-      " |  __repr__(self, /)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  indices(...)\n",
-      " |      S.indices(len) -> (start, stop, stride)\n",
-      " |      \n",
-      " |      Assuming a sequence of length len, calculate the start and stop\n",
-      " |      indices, and the stride length of the extended slice described by\n",
-      " |      S. Out of bounds indices are clipped in a manner consistent with the\n",
-      " |      handling of normal slices.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  start\n",
-      " |  \n",
-      " |  step\n",
-      " |  \n",
-      " |  stop\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  __hash__ = None\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(slice)"
+    "class A: pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d39deca",
+   "id": "9bb6b08a",
    "metadata": {},
    "outputs": [],
    "source": []
