feuille de route blog

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -27,7 +27,8 @@
     "* Le comptage de reference\n",
     "* Le niveau de génération\n",
     "\n",
-    "Objet de l'article: expliquer le fonctionnement interne  avec le module gc et sys\n"
+    "Objet de l'article: expliquer le fonctionnement interne  avec le module gc et sys\n",
+    "https://rushter.com/blog/python-garbage-collector/"
    ]
   },
   {
@@ -56,14 +57,40 @@
    "metadata": {},
    "source": [
     "* Visualiser l'innovation:map de wardley  https://blog.revolve.team/2020/05/19/outil-transformation-cartographie-simon-wardley/\n",
-    "* Les presentations de type pechakucha\n",
+    "* Les presentations de type pechakucha https://fr.wikipedia.org/wiki/Pecha_Kucha  https://www.pechakucha.com/\n",
     "* liens twitter de la période"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6492657b",
+   "metadata": {},
+   "source": [
+    "* python objetgraph https://mg.pov.lt/objgraph/\n",
+    "* architecture https://bytebytego.com/courses/system-design-interview/foreword\n",
+    "* pandas https://wesmckinney.com/blog/apache-arrow-pandas-internals/https://architecturenotes.co/database-sharding-explained/\n",
+    "* sharding https://architecturenotes.co/database-sharding-explained/    \n",
+    "* python stopit https://pypi.org/project/stopit/\n",
+    "* python perfectionnement https://github.com/pro1code1hack/Senior-Dev-Roadmap\n",
+    "* windows xp dans le navigateur https://github.com/ducbao414/win32.run  \n",
+    "* python dans le navigateur https://github.com/IvanCampos/pyScript\n",
+    "* micro front end https://martinfowler.com/articles/micro-frontends.html    \n",
+    "* python librairies https://github.com/vinta/awesome-python\n",
+    "* python dictionnaires https://github.com/fabiocaccamo/python-benedict   \n",
+    "* machine learning by reenforcement http://incompleteideas.net/book/RLbook2020.pdf \n",
+    "* datascience preparation des données https://machinelearningmastery.com/calculate-feature-importance-with-python/\n",
+    "* manip pands et numpy https://betterprogramming.pub/pandas-illustrated-the-definitive-visual-guide-to-pandas-c31fa921a43  \n",
+    "* creation maps python et google https://morioh.com/p/a9bdee14b0d2  \n",
+    "* python visualiasation de schema https://github.com/sqlhabit/sql_schema_visualizer\n",
+    "* events :https://serverlessland.com/event-driven-architecture/visuals\n",
+    "* ssh https://iximiuz.com/en/posts/ssh-tunnels/        \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea09333f",
+   "id": "db3872ee",
    "metadata": {},
    "outputs": [],
    "source": []
