Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "* python objetgraph https://mg.pov.lt/objgraph/\n",
     "* architecture https://bytebytego.com/courses/system-design-interview/foreword\n",
-    "* pandas https://wesmckinney.com/blog/apache-arrow-pandas-internals/https://architecturenotes.co/database-sharding-explained/\n",
+    "* pandas https://wesmckinney.com/blog/apache-arrow-pandas-internals/\n",
     "* sharding https://architecturenotes.co/database-sharding-explained/    \n",
     "* python stopit https://pypi.org/project/stopit/\n",
     "* python perfectionnement https://github.com/pro1code1hack/Senior-Dev-Roadmap\n",
@@ -88,9 +88,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b81a307",
+   "metadata": {},
+   "source": [
+    "#### suite"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db3872ee",
+   "id": "fe6683c4",
    "metadata": {},
    "outputs": [],
    "source": []
