Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -44,6 +44,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08d5b8b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pydantic et pydantic vs dataclasse\n",
+    "\n",
+    "* Utilisation pour decrire les données\n",
+    "* Pour valider des données\n",
+    "* a la place du d"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf2c6eb6",
    "metadata": {},
