reclamer un article

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -44,17 +44,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08d5b8b0",
+   "cell_type": "markdown",
+   "id": "b9161263",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Pydantic et pydantic vs dataclasse\n",
+    "#### Pydantic et pydantic vs dataclasse\n",
     "\n",
     "* Utilisation pour decrire les données\n",
     "* Pour valider des données\n",
-    "* a la place du d"
+    "* utilisation à la place du dataclesses"
    ]
   },
   {
