--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -28,7 +28,8 @@
     "* Le niveau de génération\n",
     "\n",
     "Objet de l'article: expliquer le fonctionnement interne  avec le module gc et sys\n",
-    "https://rushter.com/blog/python-garbage-collector/"
+    "https://rushter.com/blog/python-garbage-collector/\n",
+    "https://stackify.com/python-garbage-collection/#:~:text=The%20Python%20garbage%20collector%20has,a%20threshold%20number%20of%20objects."
    ]
   },
   {
@@ -57,10 +58,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8936fe4e",
+   "metadata": {},
+   "source": [
+    "####  Recherche dataframe : loc , iloc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf2c6eb6",
    "metadata": {},
    "source": [
-    "### Recapitulatif des Liens"
+    "# Recapitulatif des Liens"
    ]
   },
   {
