--- a/serious_game/notebook_seriousG/debug_1.ipynb
+++ b/serious_game/notebook_seriousG/debug_1.ipynb
@@ -1,9 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f9eb7426",
+   "metadata": {},
+   "source": [
+    "# debug 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4747660d",
+   "metadata": {},
+   "source": [
+    "## Instructions\n",
+    "\n",
+    "* Executer toutes les cellules \n",
+    "* Faire en sorte de corriger la cellule de la fonction pour passer les tests.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "b035e05c",
+   "execution_count": 13,
+   "id": "674f7c32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +30,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9091a1aa",
+   "metadata": {},
+   "source": [
+    "### Fonction à corriger"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ee8abcce",
+   "execution_count": 14,
+   "id": "150df6a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +52,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcd3c543",
+   "metadata": {},
+   "source": [
+    "### Ne pas modifier les cellules ci-dessous"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "164656d7",
+   "execution_count": 15,
+   "id": "630a2087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2de97f81",
+   "execution_count": 16,
+   "id": "c33c63a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,46 +92,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8d7b6e1c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 5, 'e', '5'] [1, 5, 'e', '5'] [1, 5, 'e', '5']\n"
-     ]
-    }
-   ],
-   "source": [
-    "lance1()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "61147c15",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15e 15e5 15e\n"
-     ]
-    }
-   ],
-   "source": [
-    "lance2()"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "54311cde",
+   "id": "d799f4e7",
    "metadata": {},
    "source": [
     "# Zone de test"
@@ -104,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9efa2d27",
+   "execution_count": 17,
+   "id": "3df52088",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +129,7 @@
        "TestResults(failed=1, attempted=2)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326044c8",
+   "id": "2b8d3a52",
    "metadata": {},
    "outputs": [],
    "source": []
