--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -58,10 +58,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8936fe4e",
+   "id": "5a58a8bd",
    "metadata": {},
    "source": [
     "####  Recherche dataframe : loc , iloc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fede9b40",
+   "metadata": {},
+   "source": [
+    "visualiser le bytecode https://github.com/tonybaloney/instaviz\n"
    ]
   },
   {
@@ -122,7 +130,10 @@
    "id": "fe6683c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/principle105/matrix_rain\n",
+    "    https://qruiz.net/"
+   ]
   }
  ],
  "metadata": {
