--- a/serious_game/notebook_seriousG/debug_3.ipynb
+++ b/serious_game/notebook_seriousG/debug_3.ipynb
@@ -5,7 +5,7 @@
    "id": "f9eb7426",
    "metadata": {},
    "source": [
-    "# debug 2"
+    "# debug 3"
    ]
   },
   {
@@ -44,9 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ajoute(valeur, li = []):\n",
-    "    li.append(valeur)\n",
-    "    return li\n",
+    "def surface(longueur, *argv):\n",
+    "    surface = longueur\n",
+    "    for i in range(len(*argv)):\n",
+    "        surface *= argv[i]\n",
+    "    return surface\n",
     "\n",
     "    "
    ]
@@ -72,23 +74,7 @@
     "    >>> print(b)\n",
     "    [5]\n",
     "    '''\n",
-    "    return (ajoute(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c33c63a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lance2():\n",
-    "    ''' Corriger la fonction ajoute en fonction des résultats demandés\n",
-    "    >>> b = lance2()\n",
-    "    >>> print(b)\n",
-    "    [5]\n",
-    "    '''\n",
-    "    return (ajoute(5))\n"
+    "    return (surface(5,4,3))"
    ]
   },
   {
