--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -125,16 +125,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe6683c4",
+   "cell_type": "markdown",
+   "id": "2e286589",
    "metadata": {},
-   "outputs": [],
    "source": [
     "https://github.com/principle105/matrix_rain\n",
-    "    https://qruiz.net/\n",
-    "        \n",
-    "        https://medium.com/techtofreedom/19-sweet-python-syntax-sugar-for-improving-your-coding-experience-37c4118fc6b1"
+    "https://qruiz.net/\n",
+    "https://github.com/pyfyre/pyfyre/tree/main/javascript        \n",
+    "https://medium.com/techtofreedom/19-sweet-python-syntax-sugar-for-improving-your-coding-experience-37c4118fc6b1"
    ]
   }
  ],
