--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -21,7 +21,7 @@
    "id": "31100381",
    "metadata": {},
    "source": [
-    "#### Le garbage collector.\n",
+    "#### Le garbage collector. PUBLIE le 09/04\n",
     "\n",
     "Le GC de Python utilise deux techniques differentes.\n",
     "* Le comptage de reference\n",
@@ -61,7 +61,24 @@
    "id": "1b6343f1",
    "metadata": {},
    "source": [
-    "####  Recherche dataframe : loc , iloc"
+    "####  Recherche dataframe : loc , iloc\n",
+    "En cours de conception"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57465039",
+   "metadata": {},
+   "source": [
+    "####  fronzenset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f5169e2",
+   "metadata": {},
+   "source": [
+    "#### eval et __repl__"
    ]
   },
   {
@@ -130,11 +147,23 @@
    "metadata": {},
    "source": [
     "https://github.com/principle105/matrix_rain\n",
+    "\n",
     "https://qruiz.net/\n",
+    "\n",
     "https://github.com/pyfyre/pyfyre/tree/main/javascript        \n",
+    "\n",
     "https://medium.com/techtofreedom/19-sweet-python-syntax-sugar-for-improving-your-coding-experience-37c4118fc6b1\n",
+    "\n",
     "https://www.kaggle.com/learn/pandas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77ce17d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
