--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57465039",
+   "id": "5fe2d977",
    "metadata": {},
    "source": [
     "####  fronzenset "
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f5169e2",
+   "id": "afdb3b9c",
    "metadata": {},
    "source": [
     "#### eval et __repl__"
@@ -154,13 +154,15 @@
     "\n",
     "https://medium.com/techtofreedom/19-sweet-python-syntax-sugar-for-improving-your-coding-experience-37c4118fc6b1\n",
     "\n",
-    "https://www.kaggle.com/learn/pandas"
+    "https://www.kaggle.com/learn/pandas\n",
+    "\n",
+    "system design de l'état"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77ce17d7",
+   "id": "d32aed71",
    "metadata": {},
    "outputs": [],
    "source": []
